# poubelle

./: Cargo.toml
src/: main.rs
