[package]
name = "poubelle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = "4"
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger = "0.11.3"
mime = "0.3.17"
mime2ext = "0.1.52"
rand = "0.8.5"
sqids = "0.4.1"
tree_magic_mini = "3.1.4"
